arrow direction changing with button click

--- a/styles.css
+++ b/styles.css
@@ -8,3 +8,11 @@ body {
     bottom: 0;
     text-align: center;
 }
+
+
+.sortorder:after {
+  content: '\25b2';   /* BLACK UP-POINTING TRIANGLE */
+}
+.sortorder.reverse:after {
+  content: '\25bc';   /* BLACK DOWN-POINTING TRIANGLE */
+}
