changed layout and colors

--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body {
-    padding: 70px 0;
+    padding: 70px 0 100px 0;
     font-family: Vollkorn;
     background-color: #b3cef9;
     background: linear-gradient(180deg, #f9fbff, #f9fbff 85%, #b3cef9); 
@@ -53,7 +53,13 @@ body {
 .table {
     margin-bottom: 0;
 }
+.table th {
+    text-align: center;
+}
 
+.complete-image{
+    text-align: center;
+}
 
 
 
