sort by complete works

--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body {
-    padding: 70px 0 100px 0;
+    padding: 70px 0 100px;
     font-family: Vollkorn;
     background-color: #b3cef9;
     background: linear-gradient(180deg, #f9fbff, #f9fbff 85%, #b3cef9); 
